--- a/src/features/combat/style.css
+++ b/src/features/combat/style.css
@@ -1,16 +1,26 @@
 .modal {
   position: absolute;
+  top: 0;
   margin: 0 auto;
-  width: 700px;
-  height: 400px;
-  background-color: black;
-  border: 4px solid white;
-  z-index: 100;
-  color: white;
+  width: 800px;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 4px solid gray;
 }
 
 .modal h1 {
+  color: white;
   margin-top: 0.5em;
   font-size: 2em;
   text-align: center;
+}
+
+.enemy {
+  float: right;
+  width: 250px;
+}
+
+.enemy img {
+  max-width: 100%;
+  max-height: 100%;
 }
