--- a/src/features/combat/style.css
+++ b/src/features/combat/style.css
@@ -15,12 +15,37 @@
   text-align: center;
 }
 
+.container {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.menu {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  color: white;
+  text-align: center;
+}
+
 .enemy {
-  float: right;
   width: 250px;
 }
 
-.enemy img {
+.enemy img,
+.menu img {
   max-width: 100%;
   max-height: 100%;
+}
+
+h4 {
+  margin: 0;
+}
+
+.menu div {
+  position: absolute;
+  left: 15px;
+  bottom: 0;
 }
