--- a/src/features/combat/style.css
+++ b/src/features/combat/style.css
@@ -10,7 +10,8 @@
 
 .modal h1 {
   color: white;
-  margin: 0 0 0.5em 0;
+  margin: 0;
+  padding: 0 0 4px 0;
   font-size: 2em;
   text-align: center;
   border-bottom: 1px solid gray;
@@ -20,23 +21,38 @@
   color: white;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .menu {
+  display: grid;
+  padding-top: 1em;
+  width: 300px;
+  color: white;
+}
+
+.combat-text {
+  margin-top: 5px;
+  border-top: 1px solid white;
+  grid-column: 1 / span 2;
+}
+
+.menu-item {
+  margin: auto;
   width: 100px;
   height: 100px;
   position: relative;
-  color: white;
-  /* remove margin later */
-  margin-right: 20%;
+  grid-row: 1 / 3;
 }
 
+.player,
 .enemy {
   padding: 5px;
   width: 200px;
 }
 
+.player img,
 .enemy img,
 .menu img {
   max-width: 100%;
@@ -44,10 +60,11 @@
 }
 
 h4 {
+  text-align: center;
   margin: 0;
 }
 
-.menu div {
+.menu-item div {
   position: absolute;
   left: 15px;
   bottom: 0;
